--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="invalidName">Имя слишком короткое</string>
     <string name="invalidPhone">Некорректный номер</string>
     <string name="invalidEmail">Некорректный email</string>
+    <string name="profile">Профиль</string>
 </resources>
