--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="profile">Профиль</string>
     <string name="register">Регистрация</string>
     <string name="login">Вход</string>
-    <string name="invalidPassword">Пароль слишком короткий</string>
+    <string name="invalid_password">Пароль слишком короткий</string>
+    <string name="messages">Сообщения</string>
+    <string name="hint_enter_a_message">Сообщения</string>
 </resources>
