--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="invalid_password">Пароль слишком короткий</string>
     <string name="messages">Сообщения</string>
     <string name="hint_enter_a_message">Введите текст</string>
+    <string name="title_activity_maps">Карта</string>
 </resources>
